--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -43,8 +43,8 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-end justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-phone d-flex align-items-center d-none d-lg-block"><span>+1 5589 55488 55</span></i>
-          <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sat: 11:00 AM - 23:00 PM</span></i>
+          <i class="bi bi-phone d-flex align-items-center d-none d-lg-block"><span>+6353 568 0539</span></i>
+          <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sun: 10:00 AM - 9:00 PM</span></i>
         </div>
         <a href="#book-a-table" class="cta-btn">Booka a table</a>
       </div>
@@ -106,8 +106,8 @@
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
-            <h2><span>Delicious</span> Restaurant</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h2><span>Stone Grill</span> Restaurant</h2>
+            <p>Here, every dish is crafted with passion, every table prepared with care, and every moment designed to be enjoyable and relaxing. Whether you're joining us for a quiet dinner, a joyful celebration, or simply a comforting meal, we promise to make it worth your time and taste..</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
               <a href="#book-a-table" class="btn-get-started">Book a table</a>
@@ -118,8 +118,8 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
-            <h2>At vero eos et accusamus</h2>
-            <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+            <h2>Because You Deserve the Best Moments</h2>
+            <p>At Stone Grill, every delight is to be embraced, every discomfort gently set aside. And even during busy days or special obligations, there’s always a place for good food and warm hospitality.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
               <a href="#book-a-table" class="btn-get-started">Book a table</a>
@@ -130,8 +130,9 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
           <div class="carousel-container">
-            <h2>Temporibus autem quibusdam</h2>
-            <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+            <h2>Because Not All Comforts Are Equal</h2>
+            <p>True comfort isn’t just in ease, but in what’s worth savoring.
+While not every moment is perfect, the joy found in shared meals and genuine hospitality makes each visit worthwhile. At Stone Grill, we embrace what matters, good food, warm hearts, and time well spent.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
               <a href="#book-a-table" class="btn-get-started">Book a table</a>
@@ -164,19 +165,22 @@
             <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>We provide exceptional experiences, as if true comfort and satisfaction were made to be embraced.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Hungry for more than just food?
+At Stone Grill, we serve experiences as much as we serve meals - warm, satisfying, and made with care.
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>Work is not done unless it produces a benefit or pleasant result..</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>True satisfaction comes not just from flavor, but from how it makes you feel.
+At Stone Grill, we serve meals that leave no regrets — only warmth and good memories.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>We don’t settle for just good enough. Because at Stone Grill, your dining experience should be more than a meal — it should be a moment to remember.</span></li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+              We don’t just serve food — we create moments worth remembering.
+Every plate is prepared with care, every visit guided by our passion to serve, and every detail made to bring you comfort and joy.
+
+
             </p>
           </div>
         </div>
@@ -202,7 +206,8 @@
             <div class="card-item">
               <span>01</span>
               <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <p>We put care into every effort, and every detail is meant to bring comfort.
+Because real hospitality is not just about what you serve — it's about how you make people feel.</p>
             </div>
           </div><!-- Card Item -->
 
