--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -46,7 +46,7 @@
           <i class="bi bi-phone d-flex align-items-center d-none d-lg-block"><span>+6353 568 0539</span></i>
           <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sun: 10:00 AM - 9:00 PM</span></i>
         </div>
-        <a href="#book-a-table" class="cta-btn">Booka a table</a>
+        <a href="#book-a-table" class="cta-btn">Book a table</a>
       </div>
     </div><!-- End Top Bar -->
 
@@ -541,7 +541,8 @@ Because real hospitality is not just about what you serve — it's about how you
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Custom Parties</h3>
                   <div class="price">
-                    <p><span>$99</span></p>
+                    <p><span>
+                    </span></p>
                   </div>
                   <p class="fst-italic">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -713,8 +714,8 @@ Because real hospitality is not just about what you serve — it's about how you
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Chefs</h2>
-        <div><span>Our Professional</span> <span class="description-title">Chefs</span></div>
+        <h2>STAFF</h2>
+        <div><span>Our</span> <span class="description-title">Staff</span></div>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -725,8 +726,8 @@ Because real hospitality is not just about what you serve — it's about how you
             <div class="member">
               <div class="pic"><img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Master Chef</span>
+                <h4>Jerey Gata</h4>
+                <span>Head Waiter</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -741,8 +742,8 @@ Because real hospitality is not just about what you serve — it's about how you
             <div class="member">
               <div class="pic"><img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Patissier</span>
+                <h4>Jhie Eco</h4>
+                <span>Waiter</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -757,8 +758,8 @@ Because real hospitality is not just about what you serve — it's about how you
             <div class="member">
               <div class="pic"><img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>Cook</span>
+                <h4>Stephany</h4>
+                <span>Casher</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -803,14 +804,14 @@ Because real hospitality is not just about what you serve — it's about how you
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>JM R.</h3>
+                <h4>Organization &amp; Founder</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>Sarap ng food, sulit ang presyo! Chill place to hang out with friends. Service is fast, and the staff are super friendly.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -819,14 +820,14 @@ Because real hospitality is not just about what you serve — it's about how you
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
+                <h3>Claire T.</h3>
                 <h4>Designer</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span>We were just passing through Bato and stumbled upon Stone Grill — what a gem! The seafood platter was fresh and flavorful. Highly recommended for anyone visiting stone grill."</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -835,14 +836,14 @@ Because real hospitality is not just about what you serve — it's about how you
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Jena and Rodel</h3>
+                <h4>Baybay leyte</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>Perfect place for a quiet dinner with my husband. The hot stone steak is our favorite — cooked just the way we like it, right at our table. Feels like a mini getaway!</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -851,14 +852,14 @@ Because real hospitality is not just about what you serve — it's about how you
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Maricar L.</h3>
+                <h4>Ormoc city</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>Stone Grill has become our go-to spot for family dinners. The sizzling plates are not only delicious but a fun experience for the kids! Always great service and a relaxing vibe..</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -867,14 +868,14 @@ Because real hospitality is not just about what you serve — it's about how you
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
+                <h3>mario Blazo</h3>
                 <h4>Entrepreneur</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                  <span>Your enjoyable and relaxing experience starts with stone grill</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -894,7 +895,7 @@ Because real hospitality is not just about what you serve — it's about how you
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <div><span>Check Our</span> <span class="description-title">Contact</span></div>
+        <div><span>Check Our</span>Menu<span class="description-title">Contact</span></div>
       </div><!-- End Section Title -->
 
       <div class="mb-5">
@@ -909,21 +910,21 @@ Because real hospitality is not just about what you serve — it's about how you
 
             <div class="info">
               <h3>Get in touch</h3>
-              <p>Et id eius voluptates atque nihil voluptatem enim in tempore minima sit ad mollitia commodi minus.</p>
+              <p>We'd love to hear from you! Reach us through Facebook at Stone Grill, or call us at 053 568 0539.</p>
 
               <div class="info-item d-flex">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Brgy. Tinago Bato, Leyte</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <h4>message us:</h4>
+                  <p>https://m.me/stonecitygrill</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -931,7 +932,7 @@ Because real hospitality is not just about what you serve — it's about how you
                 <i class="bi bi-phone flex-shrink-0"></i>
                 <div>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55</p>
+                  <p>+63535680539</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -980,8 +981,8 @@ Because real hospitality is not just about what you serve — it's about how you
           <i class="bi bi-geo-alt icon"></i>
           <div class="address">
             <h4>Address</h4>
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
+            <p>J.P. Riza street</p>
+            <p>Brgy. Tinago Bato, Leyte </p>
             <p></p>
           </div>
 
@@ -992,8 +993,8 @@ Because real hospitality is not just about what you serve — it's about how you
           <div>
             <h4>Contact</h4>
             <p>
-              <strong>Phone:</strong> <span>+1 5589 55488 55</span><br>
-              <strong>Email:</strong> <span>info@example.com</span><br>
+              <strong>Phone:</strong> <span>+6353 568 0539</span><br>
+              <strong>messenger:</strong> <span>https://m.me/stonecitygrill</span><br>
             </p>
           </div>
         </div>
@@ -1003,8 +1004,8 @@ Because real hospitality is not just about what you serve — it's about how you
           <div>
             <h4>Opening Hours</h4>
             <p>
-              <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br>
-              <strong>Sunday</strong>: <span>Closed</span>
+              <strong>Mon-Sun:</strong> <span>10AM - 9PM</span><br>
+            
             </p>
           </div>
         </div>
@@ -1023,13 +1024,13 @@ Because real hospitality is not just about what you serve — it's about how you
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Delicious</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Stone Grill</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        by <a href="https://bootstrapmade.com/">Stonegrill</a>
       </div>
     </div>
 
