--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -56,7 +56,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">Delicious</h1>
+          <h1 class="sitename">STONEGRILL</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
